fixed table header arrow alignment

--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -81,6 +81,11 @@
     font-weight: 500;
 }
 
+.user-table__header-content {
+    display: flex;
+    align-items: center;
+}
+
 .user-row {
     border-bottom: 1px solid rgb(241, 241, 241);
 }
